<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgwelcome"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="@dimen/_80ssp"
        android:layout_height="@dimen/_90ssp"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:background="@drawable/bgdroplets"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30ssp"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1">

        <android.support.v7.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_weight="4"
            app:cardCornerRadius="@dimen/_20ssp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14ssp"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/_10ssp">

                    <ImageView
                        android:layout_width="@dimen/_20ssp"
                        android:layout_height="@dimen/_20ssp"
                        android:layout_marginRight="@dimen/_5ssp"
                        android:src="@drawable/ic_email" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sniglet"
                        android:text="@string/Email"
                        android:textSize="@dimen/_15ssp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edtemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10ssp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext_register"
                    android:inputType="textEmailAddress"
                    android:maxLines="0"
                    android:padding="10dp"
                    android:singleLine="false"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10ssp"
                    android:paddingLeft="@dimen/_10ssp">

                    <ImageView
                        android:layout_width="@dimen/_20ssp"
                        android:layout_height="@dimen/_20ssp"
                        android:layout_marginRight="@dimen/_5ssp"
                        android:src="@drawable/ic_passworld" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sniglet"
                        android:text="@string/passworld"
                        android:textSize="@dimen/_15ssp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtpassworld"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10ssp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/custom_edittext_register"
                        android:inputType="textPassword"
                        android:maxLines="0"
                        android:padding="10dp"
                        android:singleLine="false"
                        android:textSize="15sp" />

                    <ImageView
                        android:onClick="onClick"
                        android:id="@+id/iv_showpass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="@dimen/_20sdp"
                        app:srcCompat="@drawable/ic_remove_red_eye_black_24dp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txtforgotpassworld"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5ssp"
                    android:layout_marginBottom="@dimen/_40sdp"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:text="@string/forgot_pasworld"
                    android:textAllCaps="true"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_20ssp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="@dimen/_100ssp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center"
            android:background="@drawable/bgbutton"
            android:onClick="onClick"
            android:text="@string/login" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/framelayout"
        android:layout_marginTop="@dimen/_25ssp"
        android:gravity="center"
        android:onClick="onClick"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btnfacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20ssp"
            android:background="@drawable/bg_fb_google"
            android:gravity="center_vertical"
            android:onClick="onClick"
            android:orientation="horizontal"
            android:padding="@dimen/_5ssp">

            <ImageView
                android:layout_width="@dimen/_30ssp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10ssp"
                android:src="@drawable/ic_facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10ssp"
                android:text="@string/sign_in_fb"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btngoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_10ssp"
            android:background="@drawable/bg_fb_google"
            android:gravity="center_vertical"
            android:onClick="onClick"
            android:orientation="horizontal"
            android:padding="@dimen/_5ssp">

            <ImageView
                android:layout_width="@dimen/_50ssp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10ssp"
                android:src="@drawable/ic_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10ssp"
                android:text="@string/sign_in_gg"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/txtregistered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:background="@color/textcolor"
        android:gravity="center_horizontal"
        android:onClick="onClick"
        android:orientation="horizontal"
        android:padding="@dimen/_2ssp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registered1"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_2ssp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>


</RelativeLayout>