<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgwelcome"
    tools:context=".Activity.SenOtpActivity">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="@dimen/_80ssp"
        android:layout_height="@dimen/_90ssp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_15ssp"
        android:background="@drawable/bgdroplets"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30ssp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/line1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_40ssp"
            android:layout_height="@dimen/_40ssp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/_20ssp"
            android:src="@drawable/ic_phone" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20ssp"
                android:gravity="center"
                android:text="@string/Otp_phone_number"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10ssp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="phone"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/imgedit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_10ssp"
                    app:srcCompat="@drawable/ic_create" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_5ssp"
            android:gravity="center"
            android:text="@string/sen_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30ssp"
            android:background="@color/white"
            app:cardCornerRadius="@dimen/_20ssp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_5ssp">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp_PhoneCode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_autoFormatNumber="true"
                    app:ccp_contentColor="@color/black"></com.hbb20.CountryCodePicker>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_3ssp">

                    <EditText
                        android:id="@+id/consumer_send_edt_numberphone"
                        android:layout_width="@dimen/_140sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:inputType="phone"
                        android:textSize="@dimen/_14sdp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnsend"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/bgbutton"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/send_back_otp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/textcolor"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_back_otp" />
        <TextView
            android:layout_marginLeft="@dimen/_10sdp"
            android:textAllCaps="true"
            android:textSize="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/resend" />
    </LinearLayout>
</RelativeLayout>