<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:background="@color/black"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/concert_one"
            android:gravity="center"
            android:text="@string/editprofile"
            android:textColor="@color/white"
            android:textSize="@dimen/_25sdp" />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avata"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_below="@+id/line1"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_avata" />

    <TextView
        android:id="@+id/txtfullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_avata"
        android:fontFamily="@font/concert_one"
        android:gravity="center_horizontal"
        android:text="quoc manh"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/_15ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtfullname"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/bgeditprofile"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_20ssp"
                android:layout_height="@dimen/_20ssp"
                android:layout_marginRight="@dimen/_5sdp"
                android:src="@drawable/ic_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sniglet"
                android:text="@string/firstname"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtfirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/custom_edittext"
            android:inputType="textEmailAddress"
            android:maxLines="0"
            android:padding="10dp"
            android:singleLine="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_20ssp"
                android:layout_height="@dimen/_20ssp"
                android:layout_marginRight="@dimen/_5sdp"
                android:src="@drawable/ic_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sniglet"
                android:text="@string/lastname"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtlastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/custom_edittext_register"
            android:inputType="textEmailAddress"
            android:maxLines="0"
            android:padding="10dp"
            android:singleLine="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_20ssp"
                android:layout_height="@dimen/_20ssp"
                android:layout_marginRight="@dimen/_5sdp"
                android:src="@drawable/ic_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sniglet"
                android:text="@string/Email"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/custom_edittext_register"
            android:inputType="textEmailAddress"
            android:maxLines="0"
            android:padding="10dp"
            android:enabled="false"
            android:singleLine="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:paddingLeft="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_20ssp"
                android:layout_height="@dimen/_20ssp"
                android:layout_marginRight="@dimen/_5sdp"
                android:src="@drawable/ic_gender" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sniglet"
                android:text="@string/Gender"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_19sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/custom_edittext_register"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnergeder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutlocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:paddingLeft="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_20ssp"
                    android:layout_height="@dimen/_20ssp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sniglet"
                    android:text="@string/Location"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtlocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@drawable/custom_edittext_register"
                android:inputType="textNoSuggestions"
                android:maxLines="0"
                android:padding="10dp"
                android:singleLine="false"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnsave"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_4ssp"
            android:background="@drawable/bgbutton"
            android:onClick="onClick"
            android:text="@string/Save" />
    </LinearLayout>
</RelativeLayout>